--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,4 +15,4 @@ parameters:
 #    excludePaths:
 #        - ./*/*/FileToBeExcluded.php
 #
-#    checkMissingIterableValueType: false
+    checkMissingIterableValueType: false
