--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
+        "laracasts/generators": "^2.0",
         "laravel-json-api/testing": "^1.1",
         "laravel/breeze": "^1.14",
         "laravel/pint": "^1.0",
