--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-vue": "^4.2.3",
+        "@vitejs/plugin-vue-jsx": "^3.0.1",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.27",
-        "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
-        "vite": "^3.0.0"
+        "vite": "^4.4.9"
+    },
+    "dependencies": {
+        "laravel-vite-plugin": "^0.8.0"
     }
 }
