--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "laravel-vite-plugin": "^0.8.0",
-        "pinia": "^2.1.6"
+        "pinia": "^2.1.6",
+        "vue-router": "^4.2.4"
     }
 }
